updates on urls
